--- a/.github/workflows/programs-unit.yml
+++ b/.github/workflows/programs-unit.yml
@@ -25,6 +25,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v16
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v10
+        with:
+          name: tribeca
+          extraPullNames: saber
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - uses: Swatinem/rust-cache@v1
       - name: Run fmt
         run: nix shell .#rust-stable --command cargo fmt -- --check
@@ -37,6 +44,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v16
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v10
+        with:
+          name: tribeca
+          extraPullNames: saber
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - uses: Swatinem/rust-cache@v1
       - name: Run unit tests
         run: nix shell .#rust-stable --command cargo test --lib
@@ -45,6 +59,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - uses: cachix/install-nix-action@v16
+      - name: Setup Cachix
+        uses: cachix/cachix-action@v10
+        with:
+          name: tribeca
+          extraPullNames: saber
+          authToken: ${{ secrets.CACHIX_AUTH_TOKEN }}
       - uses: Swatinem/rust-cache@v1
       - name: Generate docs
         run: nix shell .#rust-stable --command cargo doc
